refactor(payment): hexagonal payment module refinements
- Align PaymentStatus enum and service/port usage
- Update PaymentController, mappers, and adapters
- Refine DefaultPayment* services and PaymentStatusSyncExecutor
- Adjust PayPal webhook parser and PaymentRetryScheduler
- Update REFACTORING_GUIDE and payment-hexagonal-credit-refactor docs
- UserTierServiceImpl and UserTierServiceTest adjustments

Made-with: Cursor